--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@types/react": "^18.2.60",
     "@types/react-dom": "^18.2.19",
     "axios": "^0.27.2",
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
+    "primereact": "^10.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
